--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Arial", sans-serif;  
+}
+
 body,
 div,
 ul,
@@ -11,7 +15,6 @@ h5,
 h6 {
   padding:0;
   margin:0;
-/*  font-family: "Arial", sans-serif;*/
 }
 
 .clear-fix {
