--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,9 @@
-* {
-  font-family: "Arial", sans-serif;  
-}
 
-body,
-div,
-ul,
-li,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+
+* {
   padding:0;
   margin:0;
+  font-family: "Arial", sans-serif;
 }
 
 .clear-fix {
@@ -29,7 +18,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: #fff;
   line-height: 48px;
   display: inline;
 }
@@ -103,16 +92,16 @@ a {
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #02b3e4;
   display: none;
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color: #2f3d48;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: #02b3e4;
 }
 
 .white-text {
@@ -127,12 +116,12 @@ a {
 }
 
 .dark-gray {
-  background-color: #4a4a4a;
+  background-color: #2f3d48;
 }
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #2f3d48;
 }
 
 .flex-box {
