--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,9 @@
   box-sizing: border-box;
 }
 
+/*Main Title*/
 .header-top {
   padding: 2.5% 7% 0.5%;   
-  /*width: 100%;*/
-/*  display: flex;
-  flex-wrap: wrap;*/
-  /*align-items: center;*/
   text-align: center; 
   background-color: #2f3d48;
 }
@@ -34,12 +31,14 @@
   height: 1.5px;
 }
 
+/*Contacts*/
 #topContacts {
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 8px;
+  list-style-type: none;
 }
 
 .contact-item {
@@ -57,6 +56,7 @@
   color: #fff; 
 }
 
+/*Picture and message*/
 .header-middle {
   padding: 1% 7%; 
   display: flex;
@@ -66,88 +66,90 @@
 
 .middle-image {
   width: 35%;
-  /*background-color: blue;  */
 }
 
 .biopic {
   padding: 10px 0 10px;
-  margin-left: 25px;
+  margin-left: 45px;
   width: 200px;  
   border-radius: 50% 
 }
 
 .middle-text {
   width: 65%;
-  /*background-color: red;*/
 }
 
 .welcome-message {
-  margin-right: 25px;
-  /*background-color: green;*/
+  margin-right: 45px;
 }
 
 .message-text {
   text-align: justify;
   font-style: italic;
   font-size: 18px;
-/*  color: #f3f3f3;*/
-  color: grey;
+  color: #4F4F4F;
   line-height: 26px;
 }
 
+/*Skills*/
 .header-bottom { 
-
+  padding-bottom: 1%;
 }
 
-#skills-h3 {
-  padding: 1% 7%;  
-/*  color: #02b3e4;*/
-  color: #fff;
-  display: none;
-  background-color: #2f3d48;
+#skills {
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 7%; 
+  list-style-type: none;
 }
 
+.skill {
+  color: #4F4F4F;  
+  padding: 5px;
+}
 
+/*Sections*/
+.skills-title,
+.projects-title,
+.work-title,
+.education-title {
+  padding: 0.5% 7%;
+  color: #2f3d48;
+}
 
+.section-title {
+  color: #1199c3;
+  text-decoration: none;
+  margin-top: 10px;
+  display: block;
+}
 
+.online-title {
+  padding: 2% 7% 0;  
+}
 
+.section-link {
+  color: #1199c3;
+  text-decoration: none;  
+}
+
+.skills-hr, 
+.projects-hr,
+.work-hr,
+.education-hr {
+  color: #999;
+  background-color: #999;
+  margin: 0.5% 0;
+  border: 0;
+  height: 2px;
+}
 
 .education-entry,
 .work-entry,
 .project-entry {
-  padding: 0 5%;
+  padding: 0 7%;
 }
-
-h2 {
-  font-weight: bold;
-  font-size: 24px;
-  color: #999;
-  line-height: 29px;
-  padding: 10px;
-}
-
-h3 {
-  font-style: italic;
-  font-size: 20px;
-  color: #000;
-  line-height: 22px;
-}
-
-h4 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #4a4a4a;
-  line-height: 17px;
-}
-
-h2,
-h3,
-h4,
-h5 {
-  padding:10px 5%;
-
-}
-
 
 .date-text {
   font-style: italic;
@@ -163,45 +165,39 @@ h5 {
   color: #999;
   line-height: 16px;
   float: right;
-
 }
 
-p {
+.work-description, 
+.project-description {
   font-size: 14px;
-  color: #333;
+  color: #4F4F4F;
   line-height: 21px;
 }
 
-a {
-  color: #1199c3;
-  text-decoration: none;
-  margin-top: 10px;
+/*Map*/
+.map-hr {
+  color: #999;
+  background-color: #999;
+  margin: 0.5% 0 1%;
+  border: 0;
+  height: 2px;
+}
+.map-title {
+  color: #2f3d48;
+}
+
+#map {
   display: block;
+  height: 100%;
+
 }
 
+#mapDiv { 
+  height: 400px;
+  width: 100%;
+  padding: 1% 7% 5%;
 
-
-
-
-.orange {
-  background-color: #2f3d48;
 }
-
-
-
-.gray {
-  background-color: #f3f3f3;
-  padding-bottom: 10px;
-  clear:both;
-}
-
-.dark-gray {
-  background-color: #2f3d48;
-}
-
-/* TODO: Replace with image later */
-
-
 
 .flex-column {
   display: flex;
@@ -212,23 +208,28 @@ a {
   justify-content: space-around;  
 }
 
-ul {
-  list-style-type: none;
-}
-
 img {
   padding: 10px;
 }
 
-/*span {
-  padding: 5px;
-}*/
+/*Footer*/
+.connect-title {
+  font-weight: bold;
+  font-size: 24px;
+  color: #999;
+  line-height: 29px;
+  padding: 10px;
+}
 
 #lets-connect {
   text-align: center;
+  background-color: #2f3d48;
 }
 
-/* Media queries to handle various device widths */
+#footerContacts {
+  list-style-type: none;  
+}
+
 
 @media only screen and (max-width: 1024px) {
   #lets-connect {
@@ -254,20 +255,8 @@ img {
   }
 }
 
-#map {
-  display: block;
-  height: 100%;
-  margin: 0 5%;
-}
-
-#mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 5%;
-}
-
 @media only screen and (min-width: 750px) {
-  #skills-h3,
+  .skills-title,
   .biopic {
     display: block;
   }
