--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,7 @@
   box-sizing: border-box;
 }
 
-.main {
-  max-width: 1000px;
-  margin: auto;
-  padding: 0 3% 2%;
-}
-/*Main Title*/
+/*Header Title*/
 .header-top {
   padding: 2.5% 7% 0.5%;   
   text-align: center; 
@@ -37,7 +32,8 @@
 }
 
 /*Contacts*/
-#topContacts {
+#topContacts,
+#footerContacts {
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
@@ -66,9 +62,9 @@
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;    
-  padding: 4% 13%; 
+  padding: 5% 20%; 
   align-items: center;
-  background-image: url(/images/back.jpeg);
+  background-image: url(../images/back.jpeg);
 }
 
 .middle-image {
@@ -76,10 +72,10 @@
 }
 
 .biopic {
-  padding: 10px 0 10px;
-  margin-left: 45px;
+  padding: 0;
   width: 200px;  
-  border-radius: 50%;  
+  border-radius: 50%; 
+  border: solid 3px #2f3d48;   
 }
 
 .middle-text {
@@ -87,7 +83,6 @@
 }
 
 .welcome-message {
-  margin-right: 45px;
   background-color: white; 
   border: solid 3px #2f3d48;
   border-radius: 25px; 
@@ -102,21 +97,23 @@
   line-height: 26px;
 }
 
-/*Skills*/
-.header-bottom { 
-  padding-bottom: 1%;
+/*Main*/
+.main {
+  max-width: 1000px;
+  margin: auto;
+  padding: 1% 3% 70px;
 }
 
-#skills {
+/*Skills*/
+#skills { 
+}
+
+.skills {
   font-size: 16px;
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; 
-  /*padding: 0 7%; */
-/*  padding: 0 2%;
-  max-width: 1050px;
-  margin: auto;*/
   list-style-type: none; 
 }
 
@@ -130,25 +127,27 @@
 .projects-title,
 .work-title,
 .education-title {
-  /*padding: 1% 2% 0;*/
-/*  max-width: 1050px;
-  margin: auto;*/
   color: #2f3d48;
+}
+
+#skills, 
+#workExperience, 
+#projects, 
+#education, 
+#mapDiv {
+  padding: 14px 0 0;  
 }
 
 .section-title {
   font-size: 17px;
   color: #1199c3;
   text-decoration: none;
-  margin-top: 10px;
   display: block;
 }
 
 .online-title {
-  /*padding: 1.5% 7% 0;  */
-/*  padding: 0.5% 2% 0;
-  max-width: 1050px;
-  margin: auto;*/
+  padding: 1.5% 0 0; 
+  color: #2f3d48; 
 }
 
 .section-link {
@@ -174,15 +173,11 @@ img {
 .education-entry,
 .work-entry,
 .project-entry {
-/*  padding: 0 2%;
-  max-width: 1050px;
-  margin: auto;*/
-  /*margin: 0 7%;*/  
-  /*background-color: #f9f9f9;*/
-  /*border: 1px solid grey;*/
-/*  -webkit-box-shadow: 5px 5px 7px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 5px 5px 7px 0px rgba(0,0,0,0.75);
-  box-shadow: 5px 5px 7px 0px rgba(0,0,0,0.75);*/
+  margin: 12px 10px 0;
+}
+
+.project-image {
+  max-width: 100%;
 }
 
 .date-text {
@@ -190,7 +185,7 @@ img {
   font-size: 14px;
   color: #999;
   line-height: 16px;
-  float: left;
+  float: right;
 }
 
 .location-text {
@@ -198,7 +193,7 @@ img {
   font-size: 14px;
   color: #999;
   line-height: 16px;
-  float: right;
+  float: left;
 }
 
 .work-description, 
@@ -229,15 +224,11 @@ img {
 #map {
   display: block;
   height: 100%;
+  margin-top: 14px;
 }
 
 #mapDiv { 
-  height: 400px;
-  width: 100%;
-  /*padding: 1% 7% 5%;*/
-/*  padding: 0.5% 2% 5%;
-  max-width: 1050px;
-  margin: auto;*/
+  height: 350px;
 }
 
 /*Footer*/
@@ -258,33 +249,49 @@ img {
   list-style-type: none;  
 }
 
-@media only screen and (max-width: 1024px) {
-  #lets-connect {
-    margin-top: 5%;
+@media only screen and (max-width:1100px) {
+  .header-middle {   
+    padding: 5% 15%; 
   }
 }
 
-@media only screen and (max-width:900px) {
-  .biopic {
-    width: 175px;
+@media only screen and (max-width:1200px) {
+  .header-middle {   
+    padding: 5% 15%; 
+  }
+}
+
+@media only screen and (max-width:1000px) {
+  .header-middle {   
+    padding: 5% 8%; 
   }
 }
 
 @media only screen and (max-width: 750px) {
-  #lets-connect {
-    margin-top: 10%;
-  }
   .biopic {
-    width: 150px;
+    width: 150px;   
+    display: block;
+    margin: auto;
   }
-  .welcome-message {
-    display: none;
+  
+  .middle-image, 
+  .middle-text {
+    width: 100%;
+    padding: 3px;
   }
 }
 
-@media only screen and (min-width: 750px) {
-  .skills-title,
-  .biopic {
-    display: block;
+@media only screen and (max-width: 650px) {
+  .online-title {
+    padding: 3% 0 0; 
+    color: #2f3d48; 
   }
 }
+
+@media only screen and (max-width: 353px) {
+  .main {
+    padding: 1% 3% 90px;
+  }
+}
+
+
