fix: add for loops in JS and color of footer in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
 }
 
 .welcome-message {
-  background-color: white; 
+  background-color: #fff; 
   border: solid 3px #2f3d48;
   border-radius: 25px; 
   padding: 6px;
@@ -235,7 +235,7 @@ img {
 .connect-title {
   font-weight: bold;
   font-size: 24px;
-  color: #999;
+  color: #fff;
   line-height: 29px;
   padding: 10px;
 }
@@ -283,7 +283,7 @@ img {
 
 @media only screen and (max-width: 650px) {
   .online-title {
-    padding: 3% 0 0; 
+    padding: 15px 0 0; 
     color: #2f3d48; 
   }
 }
